--- a/README
+++ b/README
@@ -1,10 +1,27 @@
-# Ejecutar el script ddl en MySQL para la creacion de la DB
 
-# Instalar los modulos (dentro de webapp)
-npm i
+# Gestor Egresados
 
-# Correr la app (dentro de webapp)
-node app
+Gestor de graduados de universidad con geolocalización, registro, autenticación y demás funcionalidades como exportación e importación de datos de la DB a Excel .XLSX
 
-# Para ingresar como admin ingresar con los siguientes datos:
-username: "admin" , password: "admin"
+Sistema de autenticación:
+![](https://res.cloudinary.com/dih4s70rh/image/upload/v1706035778/egresados/egresad_jbkiwd.png)
+
+Gestor con mapa de geolocalización (Leaflet)
+![](https://res.cloudinary.com/dih4s70rh/image/upload/v1706035332/egresados/egresadosapp_cqb6s3.png)
+
+Gestor de graduados:
+![](https://res.cloudinary.com/dih4s70rh/image/upload/v1706035778/egresados/graduado3_hlsk9i.png)
+
+# Uso
+## Preparación de la base de datos
+Ejecutar el script ddl en MySQL para la creacion de la DB que se encuentra en la carpeta raiz como ddl.sql
+
+## Instalar los modulos de NodeJS (dentro de webapp, para ingresar a webapp usar <cd webapp>)
+`npm i`
+
+## Ejecutar la aplicación (dentro de webapp)
+`node app`
+
+## Para ingresar como admin ingresar con los siguientes datos:
+**username:** "admin"
+**password:** "admin"
